# voilab

./: CLAUDE.md  Dockerfile  Makefile  docker-compose.yaml  launch_isaacsim.sh  launch_workspace.sh  pyproject.toml
assets/Collected_franka-umi-scene/: .collect.mapping.json  franka-umi-scene.usd
assets/Collected_franka-umi-scene/franka_panda/franka_panda_umi-isaacsim/: franka_panda_umi-isaacsim.usd
assets/Collected_franka-umi-scene/franka_panda/franka_panda_umi-isaacsim/configuration/: franka_panda_umi-isaacsim_physics.usd  franka_panda_umi-isaacsim_robot.usd  franka_panda_umi-isaacsim_sensor.usd
assets/Collected_franka-umi-scene/plane/plane/: plane.usd
assets/Collected_franka-umi-scene/plane/plane/configuration/: plane_base.usd  plane_physics.usd  plane_robot.usd  plane_sensor.usd
assets/Collected_franka-umi-scene/table/table/: table.usd
assets/Collected_franka-umi-scene/table/table/configuration/: table_base.usd  table_physics.usd  table_robot.usd  table_sensor.usd
assets/franka_panda/: franka_panda_umi-isaacsim.urdf
docs/: diffusion_policy_layers.md  ros2_integration_design.md  ros2_threading_test_plan.md
