[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[project]
name = "voilab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "author31", email = "wi072815.tw@gmail.com" }
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "click>=8.2.1",
    "imagecodecs>=2023.9.18",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "voila>=0.5.10",
    "zarr>=2.16",
    "loguru>=0.7.3",
    "viser>=1.0.8",
    "yourdfpy>=0.0.58",
    "umi",
    "diffusion_policy",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "ipython[all]",
    "notebook",
    "plotly>=6.3.0",
    "ruff>=0.12.11",
    "kaleido>=1.0.0",
    "anywidget>=0.9.18",
    "jupyterlab-urdf",
]

[project.scripts]
voilab = "voilab.cli:cli"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
umi = { workspace = true }
diffusion_policy = { workspace = true }
jupyterlab-urdf = { path = "deps/jupyterlab_urdf-0.6.0-py3-none-any.whl" }
